# NRI

./: .gitignore  .gitmodules  1-Deploy.bat  2-Build.bat  3-Prepare NRI SDK.bat  3-PrepareSDK.bat  3-PrepareSDK.sh  4-Clean.bat  AGENTS.md  CMakeLists.txt  Dependencies.xml  ProgrammingGuide.md  README.md  VIDEO_TODO.md  nri.natvis
.agents/skills/nri-review/: SKILL.md
.github/workflows/: build.yml
Include/: NRI.h  NRI.hlsl  NRICompatibility.hlsli  NRIDescs.h  NRIDescs.hpp  NRIMacro.h
Include/Extensions/: NRIDeviceCreation.h  NRIHelper.h  NRIImgui.h  NRILowLatency.h  NRIMeshShader.h  NRIRayTracing.h  NRIResourceAllocator.h  NRIStreamer.h  NRISwapChain.h  NRIUpscaler.h  NRIVideo.h  NRIWrapperD3D11.h  NRIWrapperD3D12.h  NRIWrapperVK.h
Include/Extensions/Optional/: NRIStreamlineWrapper.h
Resources/: NRI.rc  Version.h
Shaders/: Imgui.fs.hlsl  NIS.cs.hlsl  NIS.hlsl  Shaders.cfg
Source/: NRIConfig.h
Source/Creation/: Creation.cpp
Source/D3D11/: BufferD3D11.cpp  BufferD3D11.h  BufferD3D11.hpp  CommandAllocatorD3D11.cpp  CommandAllocatorD3D11.h  CommandAllocatorD3D11.hpp  CommandBufferD3D11.cpp  CommandBufferD3D11.h  CommandBufferD3D11.hpp  CommandBufferEmuD3D11.cpp  CommandBufferEmuD3D11.h  CommandBufferEmuD3D11.hpp  CommandQueueD3D11.cpp  CommandQueueD3D11.h  CommandQueueD3D11.hpp  D3D11Extensions.cpp  D3D11Extensions.h  DescriptorD3D11.cpp  DescriptorD3D11.h  DescriptorD3D11.hpp  DescriptorPoolD3D11.cpp  DescriptorPoolD3D11.h  DescriptorPoolD3D11.hpp  DescriptorSetD3D11.cpp  DescriptorSetD3D11.h  DescriptorSetD3D11.hpp  DeviceD3D11.cpp  DeviceD3D11.h  DeviceD3D11.hpp  DeviceSemaphoreD3D11.cpp  DeviceSemaphoreD3D11.h  DeviceSemaphoreD3D11.hpp  FenceD3D11.h  FenceD3D11.hpp  FrameBufferD3D11.cpp  FrameBufferD3D11.h  FrameBufferD3D11.hpp  ImplD3D11.cpp  MemoryD3D11.cpp  MemoryD3D11.h  (+24 more)
Source/D3D12/: AccelerationStructureD3D12.cpp  AccelerationStructureD3D12.h  AccelerationStructureD3D12.hpp  BufferD3D12.cpp  BufferD3D12.h  BufferD3D12.hpp  CommandAllocatorD3D12.cpp  CommandAllocatorD3D12.h  CommandAllocatorD3D12.hpp  CommandBufferD3D12.cpp  CommandBufferD3D12.h  CommandBufferD3D12.hpp  CommandQueueD3D12.cpp  CommandQueueD3D12.h  CommandQueueD3D12.hpp  ConversionD3D12.cpp  DescriptorD3D12.cpp  DescriptorD3D12.h  DescriptorD3D12.hpp  DescriptorPoolD3D12.cpp  DescriptorPoolD3D12.h  DescriptorPoolD3D12.hpp  DescriptorSetD3D12.cpp  DescriptorSetD3D12.h  DescriptorSetD3D12.hpp  DeviceD3D12.cpp  DeviceD3D12.h  DeviceD3D12.hpp  DeviceSemaphoreD3D12.cpp  DeviceSemaphoreD3D12.h  FenceD3D12.cpp  FenceD3D12.h  FenceD3D12.hpp  FrameBufferD3D12.cpp  FrameBufferD3D12.h  ImplD3D12.cpp  MemoryAllocatorD3D12.h  MemoryD3D12.cpp  MemoryD3D12.h  MemoryD3D12.hpp  (+33 more)
Source/NONE/: ImplNONE.cpp
Source/Shared/: DeviceBase.h  HelperDataUpload.cpp  HelperDataUpload.h  HelperDataUpload.hpp  HelperDeviceMemoryAllocator.cpp  HelperDeviceMemoryAllocator.h  HelperDeviceMemoryAllocator.hpp  HelperInterface.h  HelperInterface.hpp  HelperResourceStateChange.cpp  HelperWaitIdle.cpp  ImguiInterface.h  ImguiInterface.hpp  Lock.h  NIS.h  Shared.cpp  SharedExternal.cpp  SharedExternal.h  SharedExternal.hpp  SharedLibrary.cpp  StdAllocator.h  Streamer.h  Streamer.hpp  StreamerInterface.h  StreamerInterface.hpp  Upscaler.h  Upscaler.hpp  UpscalerInterface.hpp  VideoAV1.h  VideoAnnexB.h
Source/Streamline/: GfxApiWrapper.cpp  StreamlineWrapper.cpp
Source/VK/: AccelerationStructureVK.cpp  AccelerationStructureVK.h  AccelerationStructureVK.hpp  AcceleratrionStructureVK.hpp  BufferVK.cpp  BufferVK.h  BufferVK.hpp  CommandAllocatorVK.cpp  CommandAllocatorVK.h  CommandAllocatorVK.hpp  CommandBufferVK.cpp  CommandBufferVK.h  CommandBufferVK.hpp  CommandQueueVK.cpp  CommandQueueVK.h  CommandQueueVK.hpp  ConversionVK.cpp  ConversionVK.h  ConversionVK.hpp  DescriptorPoolVK.cpp  DescriptorPoolVK.h  DescriptorPoolVK.hpp  DescriptorSetVK.cpp  DescriptorSetVK.h  DescriptorSetVK.hpp  DescriptorVK.cpp  DescriptorVK.h  DescriptorVK.hpp  DeviceSemaphoreVK.cpp  DeviceSemaphoreVK.h  DeviceSemaphoreVK.hpp  DeviceVK.cpp  DeviceVK.h  DeviceVK.hpp  DispatchTable.h  FenceVK.hpp  FrameBufferVK.cpp  FrameBufferVK.h  FrameBufferVK.hpp  ImplVK.cpp  (+38 more)
Source/Validation/: AccelerationStructureVal.cpp  AccelerationStructureVal.h  AccelerationStructureVal.hpp  BufferVal.cpp  BufferVal.h  BufferVal.hpp  CommandAllocatorVal.cpp  CommandAllocatorVal.h  CommandAllocatorVal.hpp  CommandBufferVal.cpp  CommandBufferVal.h  CommandBufferVal.hpp  CommandQueueVal.cpp  CommandQueueVal.h  CommandQueueVal.hpp  ConversionVal.cpp  ConversionVal.hpp  DescriptorPoolVal.cpp  DescriptorPoolVal.h  DescriptorPoolVal.hpp  DescriptorSetVal.cpp  DescriptorSetVal.h  DescriptorSetVal.hpp  DescriptorVal.cpp  DescriptorVal.h  DescriptorVal.hpp  DeviceSemaphoreVal.cpp  DeviceSemaphoreVal.h  DeviceSemaphoreVal.hpp  DeviceVal.cpp  DeviceVal.h  DeviceVal.hpp  FenceVal.cpp  FenceVal.h  FenceVal.hpp  FrameBufferVal.cpp  FrameBufferVal.h  FrameBufferVal.hpp  ImplVal.cpp  MemoryVal.cpp  (+34 more)
Source/WGPU/: BufferWGPU.h  BufferWGPU.hpp  CommandAllocatorWGPU.h  CommandAllocatorWGPU.hpp  CommandBufferWGPU.h  CommandBufferWGPU.hpp  DescriptorPoolWGPU.h  DescriptorPoolWGPU.hpp  DescriptorSetWGPU.h  DescriptorSetWGPU.hpp  DescriptorWGPU.h  DescriptorWGPU.hpp  DeviceWGPU.h  DeviceWGPU.hpp  FenceWGPU.h  FenceWGPU.hpp  ImplWGPU.cpp  MemoryWGPU.h  MemoryWGPU.hpp  NotesWGPU.md  PipelineCacheWGPU.h  PipelineCacheWGPU.hpp  PipelineLayoutWGPU.h  PipelineLayoutWGPU.hpp  PipelineWGPU.h  PipelineWGPU.hpp  QueryPoolWGPU.h  QueryPoolWGPU.hpp  QueueWGPU.h  QueueWGPU.hpp  SharedWGPU.h  SharedWGPU.hpp  SwapChainWGPU.h  SwapChainWGPU.hpp  TextureWGPU.h  TextureWGPU.hpp
Tests/: VideoAV1Tests.cpp
